# BirdStats-Sanaruko

./: .gitattributes  .gitignore  README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
data/: Bird_Sanaruko.xlsx  testdata.csv
marimo/: show_data.py
pages/: 1_種別個体数.py  2_月別観察種数.py  2_月別観測種数.py
scripts/: bg_cancelled.py  data_loader.py  series.py  species_per_month.py  test.py
