[project]
name = "sanaruko-stlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.69.0",
    "marimo>=0.16.5",
    "matplotlib>=3.10.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "seaborn>=0.13.2",
    "streamlit>=1.48.1",
    "xlrd>=2.0.2",
]
